k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: productpage
  name: productpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
  template:
    metadata:
      labels:
        app: productpage
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/pipelines/productpage:latest
          imagePullPolicy: Always
          name: productpage
          ports:
            - containerPort: 9080
              protocol: TCP
