k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: productpage
  name: productpage
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    app: productpage
